src/pages/index.module.scss
.main {
  display: flex;
  justify-content: center;
  height: 100vh;
  flex-direction: column;
  max-width: 450px;
  flex: 1;
  background-color: #fff;
  
  .splash__container {
    position: relative;
    flex: 1;
    background-color: #fff;
  }

  .action__block {
    flex: 0.3;
    display: flex;
    align-items: self-start;
    justify-content: center;
    padding: 0 25px;
    .btn {
        flex: 1;
        background-color: #FE782F;
        opacity: 1;
        font-size: 1.2rem;
        padding: 20px;
        transform: scale(.8);
    }
  }
}

.story_container {
  position: absolute;
  width: 100%;
  background: #fff;
  display: flex;
  justify-content: center;
}

